# sprava

./: .dockerignore  .gitignore  API.md  DA.md  DEPLOY.md  TODO.md  client_test.html  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  problemes.md  tsconfig.base.json
.github/workflows/: ci.yml  cicd.yml  deploy.yml  desktop-release.yml  docker.yml
APIs/: main.py
APIs/auth_api/: main.py
APIs/conversation_api/: main.py
APIs/media_api/: main.py
APIs/user_api/: main.py
Database/: conversations.py  media.py  pool.py  relationships.py  users.py  users_profile.py
Websocket/: websocket_handlers.py  websocket_manager.py  websocket_routes.py
apps/desktop/: package.json
apps/desktop/sprava/: package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/sprava-v2/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
apps/desktop/sprava-v2/src/: index.css
apps/desktop/sprava/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/desktop/sprava/src-tauri/capabilities/: default.json
apps/desktop/sprava/src-tauri/src/: lib.rs  macos_audio.m  main.rs  noise_suppression.rs  state.rs
apps/desktop/sprava/src-tauri/src/commands/: auth.rs  messages.rs  settings.rs  token.rs
apps/server/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/server/__tests__/: setup.ts
apps/server/src/: app.ts  server.ts
apps/voice-sfu/: Dockerfile  package.json  tsconfig.json  vitest.config.ts
apps/voice-sfu/__tests__/: setup.ts  state.test.ts
apps/voice-sfu/src/: index.ts  state.ts
docs/: api.md  websocket.md
(+301 files in other folders)
