[package]
name = "sprava-desktop"
version = "0.1.1"
description = "Sprava Desktop Client"
authors = ["daniilsys"]
edition = "2021"

[lib]
name = "sprava_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = [
    "json",
    "multipart",
    "rustls-tls",
], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = "0.4"
tauri-plugin-localhost = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
deep_filter = { git = "https://github.com/Rikorose/DeepFilterNet.git", tag = "v0.5.6", package = "deep_filter", features = [
    "tract",
    "default-model",
] }
ndarray = "0.15"
nnnoiseless = "0.5"
tauri-plugin-deep-link = "2"
